# remitMortage

./: .gitignore  LICENSE  README.md  docker-compose.yml
contracts/lending-pool/: Cargo.toml
contracts/lending-pool/src/: errors.rs  fuzz.rs  lib.rs  test.rs  types.rs
contracts/lending-pool/test_snapshots/test/: test_admin_can_set_verification_registry.1.json  test_admin_transfer_flow.1.json  test_approve_insufficient_liquidity_fails.1.json  test_approve_loan_reverts_when_paused.1.json  test_compound_interest_grows_exponentially.1.json  test_daily_borrow_limit_enforced.1.json  test_deposit.1.json  test_deposit_junior_tranche.1.json  test_deposit_resumes_after_unpause.1.json  test_deposit_reverts_when_paused.1.json  test_deposit_tranche_mismatch_fails.1.json  test_deposit_zero_fails.1.json  test_disburse_and_repay_full_lifecycle.1.json  test_disburse_fails_after_contractor_removed.1.json  test_disburse_over_principal_fails.1.json  test_disburse_reverts_when_paused.1.json  test_disburse_to_non_whitelisted_contractor_fails.1.json  test_disburse_to_whitelisted_contractor_succeeds.1.json  test_double_claim.1.json  test_double_initialize_fails.1.json  test_duplicate_loan_id_fails.1.json  test_fee_scales_with_multiple_withdrawals.1.json  test_get_pool_health_default_and_loss_ratio.1.json  test_initialize.1.json  test_is_whitelisted_returns_correct_boolean.1.json  test_loss_waterfall_junior_first.1.json  test_loss_waterfall_senior_absorbs_overflow.1.json  test_mark_default_non_approved_fails.1.json  test_mark_default_not_overdue_fails.1.json  test_migrate_by_admin.1.json  (+39 more)
(+1784 files in other folders)
