[package]
name = "lending-pool"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
verification-registry = { path = "../verification-registry" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
